--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,27 @@
-.eunit
-*.o
-*.beam
-*.plt
-erl_crash.dump
-.concrete/DEV_MODE
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# rebar 2.x
-.rebar
-rel/example_project
-ebin/*.beam
-deps
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# rebar 3
-.rebar3
-_build/
-_checkouts/
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.idea/
+*.iml
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+yarn.lock
+.eslintcache
